// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToggleButton > changes attributes and class when clicked 1`] = `
<DocumentFragment>
  <div
    aria-checked="true"
    aria-label="Desativar"
    aria-labelledby="Desativar"
    class="_toggle_button_7fc16a _toggle_button--active_7fc16a"
    data-testid="toggle-button-default"
    role="checkbox"
    tabindex="0"
    title="Desativar"
  />
</DocumentFragment>
`;

exports[`ToggleButton > renders with correct initial state 1`] = `
<DocumentFragment>
  <div
    aria-checked="false"
    aria-label="Ativar"
    aria-labelledby="Ativar"
    class="_toggle_button_7fc16a "
    data-testid="toggle-button-default"
    role="checkbox"
    tabindex="0"
    title="Ativar"
  />
</DocumentFragment>
`;
